--- a/test/login test/style.css
+++ b/test/login test/style.css
@@ -52,6 +52,13 @@ body{
     -webkit-box-shadow: -8px -8px 10px -3px rgba(0,0,0,0.2); 
     box-shadow: -8px -8px 10px -3px rgba(0,0,0,0.2);
 }
+.login_right img{
+    width: 100%;
+    /* height: 50%; */
+    padding: 10% 10% 10% 10%;
+    border-radius: 4vw;
+    overflow: hidden;
+}
 .login_form{
     position: absolute;
     margin-left: auto;
@@ -60,7 +67,7 @@ body{
     padding-top: 100px;
 }
 .signup_form{
-    display: none;
+    /* display: none; */
     position: absolute;
     margin-left: auto;
     margin-right: auto;
