--- a/test/login test/style.css
+++ b/test/login test/style.css
@@ -11,7 +11,8 @@
     box-sizing: border-box;
 }
 body{
-    background: linear-gradient(120deg, #2980b9, #8e44ad);
+    /* background: linear-gradient(120deg, #2980b9, #8e44ad); */
+    background-image: url(unknown.png);
     height: 100vh;
     overflow: hidden;
 }
@@ -54,7 +55,7 @@ body{
 }
 .login_right img{
     width: 100%;
-    /* height: 50%; */
+    height: 100%;
     padding: 10% 10% 10% 10%;
     border-radius: 4vw;
     overflow: hidden;
