login functionalitijd werkt
pagina is NIET responsive. de manager include moet aan gepast worden als we deze files gaan gebruiken. De staat van nu is gemaakt voor 1080p

--- a/test/login test/loginstyle.css
+++ b/test/login test/loginstyle.css
@@ -11,8 +11,7 @@
     box-sizing: border-box;
 }
 body{
-    /* background: linear-gradient(120deg, #2980b9, #8e44ad); */
-    background-image: url(unknown.png);
+    background: linear-gradient(120deg, #2980b9, #8e44ad);
     height: 100vh;
     overflow: hidden;
 }
