--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
 }
 header{
-    height: 100px;
+    height: 80px;
     width: 100%;
     background-color: #28282B;
     position: sticky;
@@ -11,11 +11,23 @@ header{
     grid-template: 1fr / 100px 1fr;
 }
 .logo{
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
 }
 nav{
     display: flex;
     justify-content: end;
     align-items: center;
+}
+.pfp{
+  height: 60px;
+  width: 60px;
+  border-radius: 100px;
+  border: 1px solid #FFFFFF;  
+}
+nav a{
+    color: #FFFFFF;
+}
+nav a span{
+    font-size: 30px !important;
 }
