--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ nav{
 }
 nav a{
     color: #FFFFFF;
+    padding-left: 10px;
+}
+nav a:last-child{
+    padding-left: 10px;
 }
 nav a span{
     font-size: 30px !important;
