--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;800&display=swap');
 body{
     margin: 0;
+    font-family: 'Maven Pro', sans-serif;
+}
+.titleFont{
+    font-family: 'Orbitron', sans-serif;
 }
 header{
     height: 80px;
@@ -28,6 +34,8 @@ nav{
 nav a{
     color: #FFFFFF;
     padding-left: 10px;
+    text-decoration: none;
+    font-family: 'Orbitron', sans-serif;
 }
 nav a:last-child{
     padding-left: 10px;
