--- a/css/index.css
+++ b/css/index.css
@@ -5,16 +5,18 @@
     margin: 25px auto 0 auto;
     display: grid;
     grid-template: 1fr / 1fr 1fr;
+    /* background-image: url("../images/banner.jpg");
+    background-size: contain; */
 }
 .nextTitle{
     color: white;
-    font-size: 60px;
+    font-size: 55px;
     padding: 20px;
 }
 .nextBlock{
     background-color: white;
     color: black;
-    height: 460px;
+    height: 75%;
     width: 600px;
     margin-left: 20px;
 }
