--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,9 @@ nav a:last-child{
 nav a span{
     font-size: 30px !important;
 }
+nav a:hover{
+    color: #D2042D;
+}
+nav img:hover{
+    border-color: #D2042D;
+}
