--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,11 @@
 .next{
-    height: 600px;
+    height: 300px;
     width: 95%;
     background-color: #28282B;
     margin: 25px auto 0 auto;
     display: grid;
-    grid-template: 1fr / 1fr 1fr;
-    /* background-image: url("../images/banner.jpg");
-    background-size: contain; */
+    grid-template: 1fr 1fr / 1fr;
 }
 .nextTitle{
-    color: white;
-    font-size: 55px;
-    padding: 20px;
-}
-.nextBlock{
-    background-color: white;
-    color: black;
-    height: 75%;
-    width: 600px;
-    margin-left: 20px;
-}
-.nextDetail{
-    font-size: 40px;
-    color: black;
+
 }
