--- a/css/index.css
+++ b/css/index.css
@@ -47,4 +47,12 @@
 }
 .nextButton:hover{
     border-color: white;
+}@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+  }
+
+th{
+    background-color: #28282B !important;
 }
