op admin page wat teogevoegt. nog niet helemaal af

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ footer span{
     color:white ;
     margin-right: 40px;
     font-size: 40px !important;
+    cursor: pointer;
 }
 .footer1{
     display: flex;
