--- a/css/admin.css
+++ b/css/admin.css
@@ -22,6 +22,7 @@
     float: left;
     height: 80px;
     width: 80px;
+    margin-left: 20px;
     border: black solid 1px;
     border-radius: 50%;
     overflow: hidden;
@@ -35,12 +36,13 @@ h2{
 }
 .ucName{
     height: 40px;
-    width: 300px;
-    margin-left: 120px;
+    width: 280px;
+    margin-left: 35px;
 }
 .ucPoints{
     height: 80px;
     width: 80px;
+    margin-left: 60px;
     border: black solid 1px;
     background: #FFF;
     text-align: center;
@@ -57,8 +59,15 @@ h2{
 }
 .ucIsAdmin{
     height: 40px;
-    width: 300px;
+    width: 210px;
     margin-left: 120px;
+}
+.ucIsAdmin h2{
+    width: 100%;
+    height: 24px;
+}
+.ucIsAdmin input{
+    width: 100%;
 }
 
 @media only screen and (max-width: 1800px){
