--- a/css/admin.css
+++ b/css/admin.css
@@ -69,6 +69,9 @@ h2{
 .ucIsAdmin input{
     width: 100%;
 }
+.searchFuncties input{
+    width: 25%;
+}
 
 @media only screen and (max-width: 1800px){
     .inner_user{
