--- a/css/admin.css
+++ b/css/admin.css
@@ -3,20 +3,30 @@
     display: block;
 }
 .inner_user{
-    width: 50%;
+    width: 55%;
     margin: 50px auto 50px;
+    padding: 25 10 10 10;
+    background: #28282B;
+    border: black 1px solid;
+    border-radius: 10px;
+}
+.searchFuncties_div{
+    width: 80%;
+    margin: 0 auto;
 }
 .user_card{
     display:-webkit-inline-box;
     width: 100%;
     height: 100px;
     border: black solid 1px;
+    margin-bottom: 5px;
     padding: 10 10 10 10;
     background: rgb(253, 221, 221);
     overflow: hidden;
 }
 .user_card:hover{
     border: black solid 2px;
+    transition: 0.1s;
 }
 .ucPicture{
     float: left;
