--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -1,80 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;800&display=swap');
 *{
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
     scroll-behavior: smooth;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Maven Pro', sans-serif;
     font-weight: bold;
     box-sizing: border-box;
 }
 body{
-    background: linear-gradient(120deg, #2980b9, #8e44ad);
     height: 100vh;
     overflow: hidden;
 }
-.main_container{
+main{
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template: 1fr / 40% 60%;
 }
-.inner_container{
-    margin-top: 150px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50vw;
-    height: 30vw;
-    border-radius: 0.5vw;
-    overflow: hidden;
-    -webkit-box-shadow: 7px 7px 15px -3px #000000; 
-    box-shadow: 7px 7px 15px -3px #000000;
+.loginLeft{
+width: 100%;
+height: 100%;
+background-color: #28282B;
+display: flex;
+align-items: center;
+justify-content: flex-end;
 }
-.login_main{
-    width: 100%;
-    height: 100%;
-    background: white;
-    overflow: hidden;
-}
-.login_left{
-    float: left;
-    height: 100%;
-    width: 38%;
-    background: white;
-}
-.login_right{
-    float: right;
-    height: 100%;
-    width: 62%;
-    background: linear-gradient(140deg, black, red);
-    border-top-left-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    -webkit-box-shadow: -8px -8px 10px -3px rgba(0,0,0,0.2); 
-    box-shadow: -8px -8px 10px -3px rgba(0,0,0,0.2);
-}
-.login_right img{
-    width: 100%;
-    height: 100%;
-    padding: 10% 10% 10% 10%;
-    border-radius: 4vw;
-    overflow: hidden;
+.loginRight{
+width: 100%;
+height: 100%;
+background-color: white;
+display: flex;
+align-items: center;
+justify-content: flex-start;
+padding-left: 50px;
 }
 .login_form{
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
     width: 19%;
     padding-top: 100px;
 }
 .signup_form{
     /* display: none; */
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
     width: 19%;
     padding-top: 10px;
 }
-.login_left h2{
+.login_form h2{
     text-align: center;
     padding: 0 0 20px 0;
     border-bottom: 1px solid silver;
@@ -88,12 +62,12 @@ body{
     padding: 0 40px;
     box-sizing: border-box;
 }
-form .txt_field{
+form .field{
     position: relative;
     border-bottom: 2px solid #adadad;
     margin: 30px 0;
 }
-.txt_field input{
+.field input{
     width: 100%;
     padding: 0 5px;
     height: 40px;
@@ -102,7 +76,7 @@ form .txt_field{
     background: none;
     outline: none;
 }
-.txt_field label{
+.field label{
     position: absolute;
     top: 50%;
     left: 5px;
@@ -112,29 +86,29 @@ form .txt_field{
     pointer-events: none;
     transition: .5s;
 }
-.txt_field span::before{
+.field span::before{
     content: '';
     position: absolute;
     top: 40px;
     left: 0;
     width: 0%;
     height: 2px;
-    background: #2691b9;
+    background: #D2042D;
 }
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
+.field input:focus ~ label,
+.field input:valid ~ label{
     top: -5px;
-    color: #2691b9;
+    color: #D2042D;
 }
-.txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
+.field input:focus ~ span::before,
+.field input:valid ~ span::before{
     width: 100%;
 }
 input[type="submit"]{
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: #2691b9;
+    background: #D2042D;
     border-radius: 25px;
     font-size: 18px;
     color: #e9f4fb;
@@ -143,7 +117,7 @@ input[type="submit"]{
     outline: none;
 }
 input[type="submit"]:hover{
-    border-color: #2691b9;
+    border-color: black;
     transition: .5s;
 }
 .signup_link, .login_link{
@@ -153,7 +127,7 @@ input[type="submit"]:hover{
     color: #666666;
 }
 .signup_link a, .login_link a{
-    color: #2691b9;
+    color: #D2042D;
     text-decoration: none;
     cursor: pointer;
 }
