--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 body{
     margin: 0;
     font-family: 'Maven Pro', sans-serif;
+    background-color: #464646;
 }
 .titleFont{
     font-family: 'Orbitron', sans-serif;
