--- a/css/race.css
+++ b/css/race.css
@@ -1,6 +1,6 @@
 .race_info_header{
     width: 100%;
-    height: 500px;
+    height: 450px;
     padding: 50px 50px 50px 50px;
     background: #D2042D;
     overflow: hidden;
@@ -11,4 +11,30 @@
     font-family: 'Orbitron', sans-serif;
     color: #fff;
     font-size: 60px;
+}
+.race_info_header img{
+    height: 250px;
+}
+.arrow_backward, .arrow_forward{
+    cursor: pointer;
+    position: absolute;
+    margin-top: 80px;
+    font-size: 60px;
+    font-weight: 600;
+    background: none;
+    border-radius: 50%;
+    border: none;
+}
+.arrow_backward{
+    left: 15px;
+}
+.arrow_forward{
+    right: 15px;
+}
+.arrow_backward:hover, .arrow_forward:hover{
+    margin-top: 70px;
+    font-size: 80px;
+    border: solid 3px;
+    box-shadow: 0px 0px 0px 3px rgba(0,0,0,0.3); 
+    transition: .5s;
 }
