--- a/css/race.css
+++ b/css/race.css
@@ -11,6 +11,7 @@
     font-family: 'Orbitron', sans-serif;
     color: #fff;
     font-size: 60px;
+    z-index: 1;
 }
 .race_info_header img{
     height: 250px;
@@ -34,4 +35,21 @@
     margin-top: 70px;
     font-size: 80px;
     transition: .5s;
+}
+.raceBet{
+    width: 40%;
+    margin: auto;
+    padding-top: 20px;
+    z-index: -1;
+    display: grid;
+    grid-template: 1fr / 1fr 1fr;
+    background-color: #f2f2f2;
+}
+.raceBet select{
+    width: 200px;
+    margin: 0 auto 10px auto;
+    font-size: 20px;
+    border-top: 5px solid black;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
 }
