--- a/css/race.css
+++ b/css/race.css
@@ -65,7 +65,7 @@
     font-weight: bold;
     font-size: 20px;
     position: sticky;
-    top: 80px;
+    top: 85px;
 }
 .raceSegment{
     width: 200px;
@@ -77,7 +77,7 @@
     margin-top: 40px;
 }
 .raceSegment select{
-    width: 200px;
+    width: 100%;
     height: 40px;
     margin: 0 auto 10px auto;
     font-size: 20px;
@@ -90,4 +90,27 @@
     margin-top: -10px;
     border-left: 5px solid white;
     border-right: 5px solid white;
+}
+@media only screen and (max-width: 1150px){
+    .raceBlock{
+        width: 100%;
+    }
+}
+@media only screen and (max-width: 700px){
+    .race_info_header{
+        height: 500px;
+    }
+}
+@media only screen and (max-width: 550px){
+    .raceSegment{
+        width: 150px;
+    }
+}
+@media only screen and (max-width: 450px){
+    .race_info_header{
+        height: 700px;
+    }
+    .race_info_header form input{
+        bottom: 150px;
+    }
 }
