--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ thead {
     flex: 0 0 auto;
 }
 tbody {
-    height: 350px;
+    height: 375px;
     flex: 1 1 auto;
     display: block;
     overflow-y: auto;
@@ -127,4 +127,19 @@ tr input{
         width: 200px;
     }
 }
-    
+
+table ::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+table ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+  }
+   
+table ::-webkit-scrollbar-thumb {
+    background: #D2042D; 
+  }
+  
+table ::-webkit-scrollbar-thumb:hover {
+    background: #b30000; 
+  }
