--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -39,13 +39,13 @@ padding-left: 50px;
 }
 .login_form{
     position: absolute;
-    width: 19%;
+    width: 200px;
     padding-top: 100px;
 }
 .signup_form{
     /* display: none; */
     position: absolute;
-    width: 19%;
+    width: 200px;
     padding-top: 10px;
 }
 .login_form h2{
@@ -59,13 +59,14 @@ padding-left: 50px;
     border-bottom: 1px solid silver;
 }
 .login_form form, .signup_form form{
-    padding: 0 40px;
+    padding: 0 10px;
     box-sizing: border-box;
 }
 form .field{
     position: relative;
     border-bottom: 2px solid #adadad;
     margin: 30px 0;
+    width: 180px;
 }
 .field input{
     width: 100%;
