dshfiug Am BEST

--- a/css/race.css
+++ b/css/race.css
@@ -113,4 +113,8 @@
     .race_info_header form input{
         bottom: 150px;
     }
+}@media only screen and (orientation: landscape) {
+  body {
+    background-color: lightblue;
+  }
 }
