--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -135,3 +135,18 @@ input[type="submit"]:hover{
 .signup_link a:hover, .login_link a:hover{
     text-decoration: underline;
 }
+@media only screen and (max-width: 500px) { 
+    .loginLeft{
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 100px;
+    }
+    .loginLeft img{
+        height: 100px;
+        width: 100px;
+    }
+    .login_form{
+        justify-content: center;
+    }
+}
