--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -27,3 +27,12 @@ table{
 #t1{
     display: table;
 }
+#tLastRace{
+    height: 55px;
+    width: 100%;
+    background-color: #28282B;
+    font-size: 30px;
+    color: white;
+    display: none;
+    font-weight: bold;
+}
