--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ th{
 footer{
     height: 80px;
     width: 100%;
+    margin-top: 50px;
     background-color: #28282B;
     color:white ; 
     display: grid;
