--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -27,7 +27,16 @@ table{
 #t1{
     display: table;
 }
-#tLastRace{
+#tLastRace1{
+    height: 55px;
+    width: 100%;
+    background-color: #28282B;
+    font-size: 30px;
+    color: white;
+    display: none;
+    font-weight: bold;
+}
+#tLastRace2{
     height: 55px;
     width: 100%;
     background-color: #28282B;
